--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Data Engineer Portfolio">
-    <title>My Data Engineering Portfolio</title>
-    
+    <meta name="description" content="Abhilash - Data Engineer Portfolio">
+    <title>Abhilash K | Data Engineer Portfolio</title>
+
+    <!-- External Libraries -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <style>
-        /* Global Styles */
+        /* General Styles */
         * {
             margin: 0;
             padding: 0;
@@ -35,16 +39,24 @@
         }
 
         header h1 {
-            font-size: 4em;
+            font-size: 3em;
             margin-bottom: 10px;
             animation: slideIn 1.5s ease-out;
         }
 
         header p {
-            font-size: 1.5em;
+            font-size: 1.3em;
             margin-bottom: 20px;
             opacity: 0;
             animation: fadeInText 2s ease-out 1.5s forwards;
+        }
+
+        /* Section Titles */
+        h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: #4CAF50;
+            text-align: center;
         }
 
         /* About Me Section */
@@ -55,10 +67,38 @@
             animation: slideUp 1s ease-out;
         }
 
+        /* Experience Section */
+        #experience {
+            background-color: #f9f9f9;
+            padding: 50px 10%;
+            animation: slideUp 1s ease-out;
+        }
+
+        .company-logo {
+            height: 50px;
+            margin: 0 15px;
+            transition: transform 0.3s;
+        }
+
+        .company-logo:hover {
+            transform: scale(1.2);
+        }
+
+        .job-role {
+            margin: 15px 0;
+            font-size: 1.2em;
+            color: #4CAF50;
+        }
+
+        .company-details {
+            font-size: 1.1em;
+            color: #555;
+        }
+
         /* Projects Section */
         #projects {
             padding: 50px 10%;
-            background-color: #f9f9f9;
+            background-color: #fff;
             text-align: center;
         }
 
@@ -75,16 +115,6 @@
         .project-card:hover {
             transform: translateY(-10px);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .project-card h3 {
-            color: #4CAF50;
-            margin-bottom: 10px;
-        }
-
-        .project-card p {
-            margin-bottom: 10px;
-            color: #555;
         }
 
         /* Skills Section */
@@ -109,7 +139,7 @@
         .skill:nth-child(2) { animation-delay: 0.2s; }
         .skill:nth-child(3) { animation-delay: 0.4s; }
         .skill:nth-child(4) { animation-delay: 0.6s; }
-        
+
         /* Footer Section */
         footer {
             background-color: #333;
@@ -153,26 +183,48 @@
 
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>I’m an aspiring Data Engineer. Let me show you my work!</p>
+        <h1>Abhilash</h1>
+        <p>Aspiring Data Engineer</p>
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>I specialize in building data pipelines, managing big data, and optimizing data systems for performance.</p>
+        <h2>Profile Summary</h2>
+        <p>Passionate about building scalable data pipelines and optimizing ETL processes. Proficient in SQL, Python, Apache Spark, and AWS. Experience in real-time data streaming and cloud workflows. Eager to design data-driven solutions for AI/ML applications.</p>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="company-logo">
+            <img src="amazon-logo.png" alt="Amazon" />
+        </div>
+        <div class="job-role">Amazon | Catalog Associate – Data Operations</div>
+        <div class="company-details">
+            <p>Oct 2023 – Present</p>
+            <p>• Automated ETL pipelines using Python, SQL, and AWS (S3, Athena, and Glue), increasing data processing efficiency by 20%.</p>
+            <p>• Designed SQL-based data validation scripts, improving data accuracy by 90%.</p>
+        </div>
+
+        <div class="company-logo">
+            <img src="sagacito-logo.png" alt="Sagacito Technologies" />
+        </div>
+        <div class="job-role">Sagacito Technologies | Data Research Intern</div>
+        <div class="company-details">
+            <p>Jul 2023 – Oct 2023</p>
+            <p>• Automated data collection processes using Python, reducing manual effort in newspaper ad tracking by 50%.</p>
+        </div>
     </section>
 
     <section id="projects">
-        <h2>My Projects</h2>
+        <h2>Projects</h2>
         <div class="project-card">
-            <h3>ETL Pipeline with Python</h3>
-            <p>Built a robust ETL pipeline to automate data extraction, transformation, and loading from APIs into PostgreSQL.</p>
-            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
+            <h3>FIFA World Cup Data Pipeline with Azure</h3>
+            <p>Built an end-to-end data pipeline using Azure Data Factory, Databricks, and Synapse Analytics.</p>
+            <a href="https://github.com/yourusername/fifa-pipeline" target="_blank">View on GitHub</a>
         </div>
         <div class="project-card">
-            <h3>Data Warehouse with Redshift</h3>
-            <p>Designed and implemented a scalable data warehouse schema for analytics and business intelligence using AWS Redshift.</p>
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
+            <h3>Real-Time Stock Market Data Pipeline</h3>
+            <p>Built a real-time streaming pipeline using Kafka, AWS, and Python.</p>
+            <a href="https://github.com/yourusername/stock-pipeline" target="_blank">View on GitHub</a>
         </div>
     </section>
 
@@ -180,12 +232,17 @@
         <h2>Skills</h2>
         <div class="skill">Python</div>
         <div class="skill">SQL</div>
-        <div class="skill">AWS</div>
         <div class="skill">Apache Spark</div>
+        <div class="skill">AWS</div>
     </section>
 
     <footer>
-        <p>Contact me on <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a> | <a href="mailto:your.email@example.com">Email</a></p>
+        <p>Contact me on <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a> | <a href="mailto:abhilash.krishnappa97@gmail.com">Email</a></p>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
