--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Abhilash - Data Engineer Portfolio">
+    <meta name="description" content="Abhilash K - Data Engineer Portfolio">
     <title>Abhilash K | Data Engineer Portfolio</title>
 
     <!-- External Libraries -->
@@ -183,7 +183,7 @@
 
 <body>
     <header>
-        <h1>Abhilash</h1>
+        <h1>Abhilash K</h1>
         <p>Aspiring Data Engineer</p>
     </header>
 
