--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Abhilash K - Data Engineer Portfolio</title>
+    <title>Abhilash - Data Engineer Portfolio</title>
 
     <!-- AOS Library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
@@ -148,8 +148,8 @@
     <!-- Header Section (Parallax) -->
     <div class="parallax">
         <div class="header" data-aos="fade-in">
-            <h1>Abhilash K</h1>
-            <p>Aspiring Data Engineer | Bengaluru, India</p>
+            <h1>Abhilash</h1>
+            <p>Data Engineer | Bengaluru, India</p>
         </div>
     </div>
 
@@ -194,13 +194,13 @@
             <img src="https://via.placeholder.com/300" alt="Project 1">
             <h3>FIFA World Cup Data Pipeline with Azure</h3>
             <p>Built an end-to-end data pipeline using Azure Data Factory, Databricks, and Synapse Analytics. Optimized Apache Spark jobs for data transformation.</p>
-            <a href="https://github.com/yourusername" class="button">View Project</a>
+            <a href="https://github.com/ak-abhilash/FIFA-World-Cup-Data-Pipeline-with-Azure" class="button">View Project</a>
         </div>
         <div class="card scroll-animate">
             <img src="https://via.placeholder.com/300" alt="Project 2">
             <h3>Real-Time Stock Market Data Pipeline</h3>
             <p>Built a real-time streaming pipeline using Apache Kafka, AWS (S3, Athena, Glue), and Python for stock market data analysis.</p>
-            <a href="https://github.com/yourusername" class="button">View Project</a>
+            <a href="https://github.com/ak-abhilash/Real-Time-Stock-Market-Data-Pipeline-with-Kafka" class="button">View Project</a>
         </div>
     </section>
 
@@ -208,7 +208,7 @@
     <section class="footer" data-aos="fade-up">
         <div class="section-title">Contact</div>
         <p>Email: <a href="mailto:abhilash.krishnappa97@gmail.com">abhilash.krishnappa97@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/krishnaabhilash">linkedin.com/in/yourprofile</a></p>
     </section>
 
     <!-- AOS Library Initialization -->
