--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <span class="hero-intro">Hi, my name is</span>
+                <span class="hero-intro">Hi, I'm</span>
                 <h1 class="hero-name">Abhilash</h1>
                 <h2 class="hero-title">I build data pipelines that power insights.</h2>
                 <p class="hero-description">
@@ -938,7 +938,7 @@
                 <!-- Project Card 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/600x400" alt="FIFA World Cup Data Pipeline">
+                        <img src="https://github.com/ak-abhilash/FIFA-World-Cup-Data-Pipeline-with-Azure/blob/main/Architecture.png" alt="FIFA World Cup Data Pipeline">
                         <div class="project-overlay">
                             <div class="project-info">
                                 <h3>FIFA World Cup Data Pipeline</h3>
@@ -1179,7 +1179,7 @@
                     display: inline-block;
                     padding: 10px 20px;
                     font-size: 16px;
-                    color: #fff;
+                    color: #000;
                     background-color: var(--accent);
                     border-radius: 5px;
                     text-decoration: none;
