--- a/index.html
+++ b/index.html
@@ -1165,9 +1165,8 @@
                 <div class="container">
                     <div class="footer-content">
                         <div class="social-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="#" target="_blank"><i class="https://github.com/ak-abhilash"></i></a>
+                            <a href="#" target="_blank"><i class="https://www.linkedin.com/in/krishnaabhilash/"></i></a>
                         </div>
                         <p>Designed & Built by Abhilash</p>
                     </div>
