Reverted to previous index.html

--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
 
             <!-- Project Card 2 -->
             <div class="project-card">
-                <a href="https://github.com/ak-abhilash/Real-Time-Stock-Market-Data-Pipeline-with-Kafka" target="_blank">
+                <a href="https://github.com/ak-abhilash/Real-Time-Stock-Market-Analysis" target="_blank">
                     <div class="project-image">
                         <img src="https://raw.githubusercontent.com/ak-abhilash/Real-Time-Stock-Market-Data-Pipeline-with-Kafka/fd8d3e08fcf91b7fc716e759b63ff3d02a11f3b1/Architecture.jpg" alt="Real-time Stock Market Analysis">
                         <div class="project-overlay">
@@ -963,12 +963,12 @@
                         <img src="https://raw.githubusercontent.com/ak-abhilash/Dagster-cloud-project/refs/heads/main/screenshots/Screenshot%202025-01-19%20155117.png" alt="Dagster Cloud Project">
                         <div class="project-overlay">
                             <div class="project-info">
-                                <h3>Data Quality Framework</h3>
-                                <p>Automated data quality monitoring and alerting system</p>
+                                <h3>Dagster Cloud Project</h3>
+                                <p>Automated data processing using Dagster and DuckDB</p>
                                 <div class="project-tech">
                                     <span>Python</span>
-                                    <span>Dagster</span>
-                                    <span>AWS</span>
+                                    <span>dbt</span>
+                                    <span>Airflow</span>
                                 </div>
                             </div>
                         </div>
