--- a/index.html
+++ b/index.html
@@ -243,11 +243,6 @@
                 <span class="hero-intro">Hi, I'm</span>
                 <h1 class="hero-name">Abhilash</h1>
                 <h2 class="hero-title">I build data pipelines that power insights.</h2>
-                <p class="hero-description">
-                    I'm a data engineer specializing in building scalable, efficient data workflows and ETL pipelines. 
-                    I transform raw data into valuable business insights using cutting-edge technologies like AWS, Azure, 
-                    Apache Spark, and Kafka.
-                </p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work <i class="fas fa-arrow-right"></i></a>
                     <a href="#contact" class="btn btn-outline">Contact Me</a>
@@ -551,12 +546,12 @@
                     
                     <div class="tech-list">
                         <ul>
-                            <li><span class="tech-arrow">▹</span> AWS Cloud</li>
+                            <li><span class="tech-arrow">▹</span> SQL</li>
                             <li><span class="tech-arrow">▹</span> Python</li>
                             <li><span class="tech-arrow">▹</span> Kafka & Streaming</li>
                         </ul>
                         <ul>
-                            <li><span class="tech-arrow">▹</span> SQL</li>
+                            <li><span class="tech-arrow">▹</span> AWS Cloud</li>
                             <li><span class="tech-arrow">▹</span> JavaScript</li>
                             <li><span class="tech-arrow">▹</span> Airflow</li>
                         </ul>
@@ -987,8 +982,8 @@
                                 <p>A cloud project using Dagster and DuckDB</p>
                                 <div class="project-tech">
                                     <span>Python</span>
-                                    <span>dbt</span>
-                                    <span>Airflow</span>
+                                    <span>Dagster</span>
+                                    <span>DuckDB</span>
                                 </div>
                             </div>
                         </div>
@@ -1016,7 +1011,7 @@
                 </div>
                 <h3>Databases</h3>
                 <ul class="skill-list">
-                    <li>SQL (MySQL, PostgreSQL)</li>
+                    <li>SQL (MySQL, Microsoft SQL, PostgreSQL)</li>
                     <li>MongoDB</li>        
                     <li>Amazon Redshift</li>
                 </ul>
