--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
               <div style="display: flex; flex-wrap: wrap; gap: 10px; font-size: 12px;">
                 <span style="background: rgba(255,255,255,0.05); padding: 4px 10px; border-radius: 6px;">FastAPI</span>
                 <span style="background: rgba(255,255,255,0.05); padding: 4px 10px; border-radius: 6px;">React</span>
+                <span style="background: rgba(255,255,255,0.05); padding: 4px 10px; border-radius: 6px;">Python</span>
                 <span style="background: rgba(255,255,255,0.05); padding: 4px 10px; border-radius: 6px;">TailwindCSS</span>
                 <span style="background: rgba(255,255,255,0.05); padding: 4px 10px; border-radius: 6px;">OpenRouter API</span>
               </div>
