--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         </ul>
       </div>
       <div>
-        <h3 style="color: var(--clr-primary);">Sagacito — Data Research Intern</h3>
+        <h3 style="color: var(--clr-primary);">Sagacito — Data Engineer Intern</h3>
         <p style="font-size: 14px; color: var(--clr-subtext);">Jul 2023 – Oct 2023</p>
         <ul style="margin-top: 10px; color: var(--clr-subtext); list-style: none; padding-left: 20px;">
           <li>▹ Built Python scripts to automate ad data scraping</li>
